Modulo instrumento creado

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
             "integrante\\":"public/integrante",
             "asistencia\\":"public/asistencia",
             "evento\\":"public/evento",
+            "instrumento\\":"public/instrumento",
             "admin\\": "src/admin/",
             "dao\\": "src/dao/",
             "modelo\\": "src/modelo/",
